--- a/8-Puzzle-From-Java/8-Puzzle-From-Java.csproj
+++ b/8-Puzzle-From-Java/8-Puzzle-From-Java.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BFS_solution.cs" />
     <Compile Include="DFS solution.cs" />
     <Compile Include="Minimum State Solution.cs" />
     <Compile Include="Program.cs" />
